# smuxcpp

./: CMakeLists.txt
examples/: client_example.cpp  server_example.cpp
src/: smux.cpp  smux.h
test/: smux_test.cpp
